# vortex-dl

./: .gitignore  LICENSE  PKG-INFO  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  ui.py
vortex_dl/: __init__.py  core.py  main.py  ui.py
