[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vortex-dl"
version = "1.3.0"
description = "High-Performance Async Downloader with Smart Resume & Batch Mode"
authors = [
    {name = "Smile Of Beauty", email = "Jenderal1337@gmail.com"},
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "shellingham>=1.5.0",
    "packaging>=23.0",
    "anyio>=4.0.0",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Home = "https://github.com/Jenderal92/vortex-dl"

[project.scripts]
vortex-dl = "vortex_dl.main:app"